<resources>
    <string name="web_client_id">359954007543-fng9elacp91p4ef35c9u176vobsla7ku.apps.googleusercontent.com</string>
    <string name="app_name">AI Travel Planner</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_interest">I tuoi interessi</string>
    <string name="confirm">Conferma</string>
    <string name="interest_story">Storia</string>
    <string name="interest_art">Arte e Cultura</string>
    <string name="interest_party">Party</string>
    <string name="interest_nature">Nature</string>
    <string name="interest_entertainment">Intrattenimento</string>
    <string name="interest_sport">Sport</string>
    <string name="interest_shopping">Shopping</string>
    <string name="logout">Esci</string>
    <string name="profile_travel">I tuoi viaggi</string>
    <string name="shared_travels"><u>Viaggi pubblicati</u></string>
    <string name="title_shared_travels">I tuo viaggi pubblicati</string>
    <string name="title_travel">Genera viaggio</string>
    <string name="title_profile">Il tuo profilo</string>
    <string name="title_creation">Genera il tuo viaggio</string>
    <string name="title_activity_login">login_activity</string>
    <string name="login_text">Bentornato!</string>
    <string name="stage_button_delete">Elimina tappa</string>
    <string name="login_button_text">Accedi con Google</string>
    <string name="post_stage_title">Le tappe</string>
    <string name="travel_summary_selected_stage">Le tappe del tuo viaggio</string>
    <string name="travel_summary_found_stage">Aggiungi tappa</string>
    <string name="search_stage">Cerca tappe</string>
    <string name="search_travel">Cerca viaggio</string>
    <string name="save_travel">Salva viaggio</string>
    <string name="content_description_image_stage">Immagine della tappa del viaggio</string>
    <string name="content_description_affinity_icon">Icona per rappresentare la percentuale di affinità</string>
    <string name="content_description_add_stage_button">Bottone per aggiungere la tappa al viaggio</string>
    <string name="content_description_app_icon">Icona dell\'app rappresentante un areoplanino di carta che gira intorno alla Terra con un omino attaccato all\'ala</string>
    <string name="content_description_filter_icon">Icona con cui cercare che rappresenta un filtro</string>
    <string name="content_description_travel_image">Immagine che rappresenta il viaggio</string>
    <string name="content_description_user_icon">Icona che rappresenta un utente</string>
    <string name="content_description_empty_heart_icon">Icona che rappresenta un cuore vuoto; indica che non è stato messo mi piace al viaggio</string>
    <string name="content_description_full_heart_icon">Icona che rappresenta un cuore pieno; indica che è stato messo mi piace al viaggio</string>
    <string name="content_description_search_icon">Icona che rappresenta una lente di ingrandimento</string>
    <string name="sourceText">Scegli la partenza:</string>
    <string name="destText">Scegli la destinazione</string>
    <string name="actualPosText">oppure utilizza posizione attuale</string>
    <string name="autoDestText">oppure genera automaticamente</string>
    <string name="daysText">Quanti giorni:</string>
    <string name="hotelText">Hai bisogno di un\'alloggio?</string>
    <string name="budgetText">Budget:</string>
    <string name="economicBudgetText">economico</string>
    <string name="middleBudgetText">medio</string>
    <string name="highBudgetText">senza badare a spese</string>
    <string name="generateTravelBtn">Genera viaggio</string>
    <string name="travel_form">Genera viaggio</string>
</resources>