<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.aitravelplanner.ui.dashboard.DashboardFragment"
        android:label="@string/title_travel"
        tools:layout="@layout/fragment_travel" >
        <action
            android:id="@+id/action_fragment_home_to_fragment_interest"
            app:destination="@id/fragment_interest" />
    </fragment>

    <fragment
        android:id="@+id/navigation_travel_form"
        android:name="com.example.aitravelplanner.ui.travel.TravelFormFragment"
        android:label="@string/travel_form"
        tools:layout="@layout/fragment_travel_form" />


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.aitravelplanner.ui.travel.TravelFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_fragment_home_to_fragment_interest"
            app:destination="@id/fragment_interest" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.aitravelplanner.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_fragment_profile_to_fragment_shared_profile"
            app:destination="@id/navigation_shared_travels" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shared_travels"
        android:name="com.example.aitravelplanner.ui.profile.SharedTravelsFragment"
        android:label="@string/shared_travels"
        tools:layout="@layout/fragment_shared_travels_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.aitravelplanner.ui.travel_summary.TravelSummaryFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_travel_summary" />
    <fragment
        android:id="@+id/fragment_interest"
        android:name="com.example.aitravelplanner.ui.interests.InterestsFragment"
        android:label="@string/title_interest"
        tools:layout="@layout/fragment_interests" >
        <action
            android:id="@+id/action_fragment_interest_to_fragment_home"
            app:destination="@id/navigation_dashboard" />
    </fragment>
</navigation>